# Proyecto-Sistemas-Lineales-y-Se-ales

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  ejecutar.md  explicacion.md  main.py
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/api/: __init__.py  analysis.py  interpret.py  main.py  routes.py  schemas.py
backend/data/: __init__.py  config.py  live_config.py  live_loader.py  loader.py
backend/spectra_dsp/: __init__.py  autocorr.py  cross_spectrum.py  cycle_phase.py  entropy.py  fir.py  ifft_filter.py  metrics.py  preprocessing.py  stft.py  welch.py  windows.py
backend/tests/: conftest.py  test_api.py  test_coherence.py  test_cycle_phase.py  test_entropy.py  test_fir.py  test_ifft_filter.py  test_live.py  test_parseval.py  test_welch.py  test_wiener_khinchin.py  test_windows.py
docs/: TECHNICAL.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  theme.ts  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ComparisonView.tsx  Controls.tsx  LiveControls.tsx  LiveView.tsx  LoadingOverlay.tsx  ModeToggle.tsx  Panel1Time.tsx  Panel2Spectral.tsx  Panel3Coherence.tsx  Panel4Summary.tsx  Plot.tsx  RegimeGauge.tsx  StockSelectorPanel.tsx  WorldGlobe.tsx
frontend/src/hooks/: useAnalysis.ts  useLiveAnalysis.ts
