[project]
name = "spectra-backend"
version = "1.0.0"
description = "SPECTRA — motor DSP propio + API para análisis espectral académico"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
